force-app/main/default/objects/Subscription__c/fields/Application_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_Percent__c</fullName>
    <label>Application Fee Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>