force-app/main/default/objects/Subscription__c/fields/Billing_Cycle_Anchor__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle_Anchor__c</fullName>
    <description>A future timestamp to anchor the subscription’s billing cycle. This is used to determine the date of the first full invoice, and, for plans with month or year intervals, the day of the month for subsequent invoices. The timestamp is in UTC format.</description>
    <inlineHelpText>A future timestamp to anchor the subscription’s billing cycle.</inlineHelpText>
    <label>Billing Cycle Anchor</label>
    <type>DateTime</type>
</CustomField>