force-app/main/default/objects/Subscription__c/fields/Billing_Thresholds_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Thresholds_Amount__c</fullName>
    <label>Billing Thresholds Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>