force-app/main/default/objects/Subscription__c/fields/Cancel_at_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Cancel_at_Period_End__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel at Period End</label>
    <type>Checkbox</type>
</CustomField>