force-app/main/default/objects/Subscription__c/fields/Cancellation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comment__c</fullName>
    <description>Additional comments about why the user canceled the subscription, if the subscription was cancelled explicitly by the user.</description>
    <label>Cancellation Comment</label>
    <type>TextArea</type>
</CustomField>