force-app/main/default/objects/Subscription__c/fields/Cancellation_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Feedback__c</fullName>
    <description>The customer submitted reason for why they cancelled, if the subscription was cancelled explicitly by the user.
too_expensive
It’s too expensive

missing_features
Some features are missing

switched_service
I’m switching to a different service

unused
I don’t use the service enough

customer_service
Customer service was less than expected

too_complex
Ease of use was less than expected

low_quality
Quality was less than expected

other
Other reason</description>
    <label>Cancellation Feedback</label>
    <length>150</length>
    <type>Text</type>
</CustomField>