force-app/main/default/objects/Subscription__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Why this subscription was cancelled.

Possible enum values
cancellation_requested
payment_disputed
payment_failed</description>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>