force-app/main/default/objects/Subscription__c/fields/Cancelled_At__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_At__c</fullName>
    <description>If the subscription has been canceled, the date of that cancellation. If the subscription was canceled with cancel_at_period_end, canceled_at will reflect the time of the most recent update request, not the end of the subscription period when the subscription is automatically moved to a canceled state.</description>
    <inlineHelpText>If the subscription has been canceled, the date of that cancellation</inlineHelpText>
    <label>Cancelled At</label>
    <type>DateTime</type>
</CustomField>