force-app/main/default/objects/Subscription__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Three-letter ISO currency code, in lowercase. Must be a supported currency.</description>
    <label>Currency</label>
    <length>150</length>
    <type>Text</type>
</CustomField>