force-app/main/default/objects/Subscription__c/fields/Current_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Period_End_Date__c</fullName>
    <inlineHelpText>End of the current period that the subscription has been invoiced for. At the end of this period, a new invoice will be created.</inlineHelpText>
    <label>Current Period End Date</label>
    <type>DateTime</type>
</CustomField>