force-app/main/default/objects/Subscription__c/fields/Current_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Period_Start_Date__c</fullName>
    <inlineHelpText>Start of the current period that the subscription has been invoiced for.</inlineHelpText>
    <label>Current Period Start Date</label>
    <type>DateTime</type>
</CustomField>