force-app/main/default/objects/Subscription__c/fields/Days_Until_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Due__c</fullName>
    <label>Days Until Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>