force-app/main/default/objects/Subscription__c/fields/Member_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Member_IsActive__c</fullName>
    <formula>Contact__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member IsActive</label>
    <type>Checkbox</type>
</CustomField>