force-app/main/default/objects/Subscription__c/fields/Pause_Collection_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Pause_Collection_Behavior__c</fullName>
    <label>Pause Collection Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>keep_as_draft</fullName>
            </value>
            <value>
                <fullName>mark_uncollectible</fullName>
            </value>
            <value>
                <fullName>void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>