force-app/main/default/objects/Subscription__c/fields/Payment_Method_Types_c__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Types_c__c</fullName>
    <label>Payment Method Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ach_credit_transfer</fullName>
            </value>
            <value>
                <fullName>ach_debit</fullName>
            </value>
            <value>
                <fullName>acss_debit</fullName>
            </value>
            <value>
                <fullName>au_becs_debit</fullName>
            </value>
            <value>
                <fullName>bacs_debit</fullName>
            </value>
            <value>
                <fullName>bancontact</fullName>
            </value>
            <value>
                <fullName>boleto</fullName>
            </value>
            <value>
                <fullName>card</fullName>
            </value>
            <value>
                <fullName>eps</fullName>
            </value>
            <value>
                <fullName>fpx</fullName>
            </value>
            <value>
                <fullName>giropay</fullName>
            </value>
            <value>
                <fullName>grabpay</fullName>
            </value>
            <value>
                <fullName>ideal</fullName>
            </value>
            <value>
                <fullName>konbini</fullName>
            </value>
            <value>
                <fullName>p24</fullName>
            </value>
            <value>
                <fullName>sepa_debit</fullName>
            </value>
            <value>
                <fullName>sofort</fullName>
            </value>
            <value>
                <fullName>wechat_pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>