force-app/main/default/objects/Subscription__c/fields/Pending_Invoice_Item_Interval_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Invoice_Item_Interval_Count__c</fullName>
    <label>Pending Invoice Item Interval Count</label>
    <length>18</length>
    <type>Text</type>
</CustomField>