force-app/main/default/objects/Subscription__c/fields/PMA_Order__c.field-meta.xml
<CustomField>
    <fullName>PMA_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PMA Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>