force-app/main/default/objects/Subscription__c/fields/Reset_Billing_Cycle_Anchor__c.field-meta.xml
<CustomField>
    <fullName>Reset_Billing_Cycle_Anchor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Billing Cycle Anchor</label>
    <type>Checkbox</type>
</CustomField>