force-app/main/default/objects/Subscription__c/fields/Stripe_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Subscription Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>