force-app/main/default/objects/Subscription__c/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <inlineHelpText>If the subscription has ended, the date the subscription ended.</inlineHelpText>
    <label>Subscription End Date</label>
    <type>DateTime</type>
</CustomField>