force-app/main/default/objects/Subscription__c/fields/Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Status__c</fullName>
    <formula>IMAGE(
CASE(Status__c,
&quot;active&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;unpaid&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;canceled&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;incomplete&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;incomplete_expired&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;past_due&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/img/samples/flag_yellow.gif&quot;),
&quot;Subscription Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Status</label>
    <type>Text</type>
</CustomField>