force-app/main/default/objects/Subscription__c/fields/SYS_Key__c.field-meta.xml
<CustomField>
    <fullName>SYS_Key__c</fullName>
    <externalId>true</externalId>
    <label>SYS Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>