force-app/main/default/objects/Subscription__c/fields/Transfer_Data_Amount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Data_Amount_Percent__c</fullName>
    <label>Transfer Data Amount Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>