force-app/main/default/objects/Subscription__c/fields/Transfer_Data_Destination__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Data_Destination__c</fullName>
    <label>Transfer Data Destination</label>
    <length>56</length>
    <type>Text</type>
</CustomField>