force-app/main/default/objects/Subscription__c/listViews/All_Failed_Subscriptions.listView-meta.xml
<ListView>
    <fullName>All_Failed_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Member_IsActive__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription_End_Date__c</columns>
    <columns>Cancelled_At__c</columns>
    <columns>Latest_Invoice__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>incomplete,incomplete_expired</value>
    </filters>
    <label>All Failed Subscriptions</label>
</ListView>