force-app/main/default/objects/Subscription__c/listViews/All_Subscriptions.listView-meta.xml
<ListView>
    <fullName>All_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Member_IsActive__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Billing_Cycle_Anchor__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription_Status__c</columns>
    <columns>Latest_Invoice__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Subscriptions</label>
</ListView>